# CS1666-InfiniteRunner

./: .gitignore  Cargo.toml  InfRun.md  README.md  infinite_runner_team_description.md
CompiledBuilds/Linux DEB/inf_runner_1.0.0_amd64/control/: control  md5sums
CompiledBuilds/Linux DEB/inf_runner_1.0.0_amd64/data/usr/share/applications/: inf_runner.desktop
CompiledBuilds/MacOS App/Urban Odessey.app/Contents/MacOS/: inf_runner
CompiledBuilds/MacOS App/Urban Odessey.app/Urban Odessey.app/Contents/: Info.plist
CompiledBuilds/MacOS App/Urban Odessey.app/Urban Odessey.app/Contents/Resources/: Urban Odessey.icns
assets/: Physics_Outline.txt
assets/instructions/: collectables.xcf  controls.xcf  interactable.xcf  over.xcf
assets/obstacles/: powerup.xcf
assets/player/: player.xcf
assets/powers/: bouncy.xcf  floaty.xcf  multiplier.xcf  shield.xcf  speed.xcf
inf_runner/: Cargo.toml
inf_runner/examples/: credits.rs
inf_runner/src/: credits.rs  demo.rs  lib.rs  main.rs  physics.rs  proceduralgen.rs  utils.rs
src/: backgroundgen.rs  credits.rs  demo.rs  instruction.rs  lib.rs  main.rs  physics.rs  powers.rs  proceduralgen.rs  runner.rs  testbezier.rs  testperlin.rs  title.rs  utils.rs
